--- a/css/styles.css
+++ b/css/styles.css
@@ -3,30 +3,50 @@
 	padding: 2px 1px;
 	text-align: center;
 }
-#name{
+#header{
  text-align: center;
- font-size: 32px;
+ font-size: 40px;
  font-weight: bold;
- height: 40px;
  background-color: lightgreen;
  color: white;
-
+}
+#name{
+height: 40px;
 }
 .title{
  background-color: lightgreen;
- padding:5px;
+ padding:40px;
  font-family: "Helvetica";
  color:white;
- height: 100px;
+ height: 20px;
 }
  .circle{
-
- }
+ display:inline-block;
+margin: 50px;
+padding: 30px;
+height: 20px;
+width: 20px;
+border:20px solid;
+border-radius:80px;
+background-color:white;
+}
+#space{
+margin: auto;
+padding:20px;
+height:30px;
+width:100px;
+}
+#block{
+margin:auto;
+background-color: lightgray;
+padding:100px;
+height:20px;
+width:90px;
 }
 .content_wrapper{
 	margin:auto;
-	background-color: white;
+	height: 200px;
 	width: 500px;
 	text-align: left;
-}
+
 }
