--- a/css/styles.css
+++ b/css/styles.css
@@ -43,10 +43,17 @@ padding:100px;
 height:20px;
 width:90px;
 }
+#about_me{ 
+margin:auto;
+padding:100px;
+font-family: "Arial";
+color: lightgray;
+height:10px;
+}
 .content_wrapper{
-	margin:auto;
-	height: 200px;
-	width: 500px;
-	text-align: left;
+margin:auto;
+height: 100px;
+width: 100px;
+text-align: left;
 
 }
