--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ width:90px;
 }
 #about_me{ 
 margin:auto;
-font-family: "Arial";
+font-family: "Helvetica";
 color: lightgray;
 height:10px;
 text-align: left;
