--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,9 @@
  background-color: lightgreen;
  color: white;
 }
+body{
+text-align: center;
+}
 #name{
 height: 40px;
 }
@@ -23,7 +26,7 @@ height: 40px;
  .circle{
  display:inline-block;
 margin: 50px;
-padding: 30px;
+padding: 40px;
 height: 20px;
 width: 20px;
 border:20px solid;
@@ -34,26 +37,32 @@ background-color:white;
 margin: auto;
 padding:20px;
 height:30px;
-width:100px;
+width: 40px;
+
+}
+img.resize{
+margin:-30px;
+width: 50px;
+height:50px;
 }
 #block{
 margin:auto;
 background-color: lightgray;
-padding:100px;
-height:20px;
-width:90px;
+padding:40px;
+height:120px;
+width:300px;
 }
 #about_me{ 
-margin:auto;
 font-family: "Helvetica";
 color: lightgray;
-height:10px;
+width:80px;
 text-align: left;
 }
+
 .content_wrapper{
 margin:auto;
-height: 20px;
-width: 90px;
+padding:10px;
+width: 1000px;
 text-align: left;
 color:lightgray;
 font-family:"Helvetica";
